erDiagram
    IM_ACCOUNT {
        TEXT user_id PK
        TEXT nickname
    }

    CHAT_GROUP {
        TEXT group_id PK
        TEXT group_name
        TEXT group_source "simulated/real"
        TEXT group_owner_user_id FK
        INTEGER member_count
        INTEGER max_member_count
        INTEGER is_whole_muted
    }

    GROUP_MEMBER {
        TEXT group_id PK
        TEXT user_id PK
        TEXT card "群名片"
        TEXT role "owner/admin/member"
        INTEGER joined_at
        INTEGER last_sent_at
        INTEGER mute_until
    }

    GROUP_EVENT {
        TEXT event_id PK
        TEXT group_id FK
        TEXT event_type
        TEXT payload_json "事件载荷"
        INTEGER created_at
    }

    IM_ACCOUNT ||--o{ CHAT_GROUP : "is_group_owner, 1:N"
    CHAT_GROUP ||--o{ GROUP_MEMBER : "has_member, 1:N"
    IM_ACCOUNT ||--o{ GROUP_MEMBER : "joins, 1:N"
    CHAT_GROUP ||--o{ GROUP_EVENT : "records, 1:N"
